rust/macros/tests/invalid/target/rls/debug/deps/double_commas_rs-b77253cbc7000fa6.d
e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\double_commas_rs-b77253cbc7000fa6.rmeta: double-commas.rs

e:\playground\Exercism Solutions\rust\macros\tests\invalid\target\rls\debug\deps\double_commas_rs-b77253cbc7000fa6.d: double-commas.rs

double-commas.rs:
